--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "cors": "^2.8.5",
     "exceljs": "^4.2.1",
     "express": "^4.17.1",
-    "read-excel-file": "^5.1.0"
+    "read-excel-file": "^5.1.0",
+    "swagger-jsdoc": "^6.0.0",
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
